refactor: implement structure response details
