# src/controllers/user_controller.ts
@@ -1,4 +1,4 @@
-import { UserService } from '../services/user_services';
+import { UserService } from "../services/user_services";
 import {
   Body,
   Controller,
@@ -8,12 +8,14 @@ import {
   Route,
   Response,
   SuccessResponse,
-} from 'tsoa';
-import { User } from '../models/userModel';
-import { updateProfileDto } from '../dtos/user.dto';
-import { GetUserError } from '../dtos/error.dto';
+} from "tsoa";
+import { User } from "../models/userModel";
+import { updateProfileDto } from "../dtos/user.dto";
+import { GetUserError } from "../dtos/error.dto";
+import { ResponseHandler } from "../utils/response";
+import { ApiResponseUpdateUser } from "../dtos/user.dto";
 
-@Route('/user')
+@Route("/user")
 export class UserController extends Controller {
   private userService = new UserService();
 
@@ -22,20 +24,34 @@ export class UserController extends Controller {
     this.userService = this.userService;
   }
 
-  @Patch('{userId}')
+  @Patch("{userId}")
   public async updateProfile(
     @Path() userId: string,
     @Body() profileData: updateProfileDto
-  ): Promise<User> {
-    return this.userService.updateProfile(userId, profileData);
+  ): Promise<ApiResponseUpdateUser> {
+    const data = await this.userService.updateProfile(userId, profileData);
+    const response = new ResponseHandler({
+      data: data,
+      message: "User profile successfully updated",
+      statusCode: this.setStatus(200),
+      status: "success",
+    });
+    // this.setStatus(200);
+    return response;
   }
 
-  @Response<GetUserError>('default', 'user not found')
-  @SuccessResponse(200, 'fetch user succesful')
-  @Get('{userId}')
+  @Response<GetUserError>("default", "user not found")
+  @SuccessResponse(200, "fetch user succesful")
+  @Get("{userId}")
   public async getUser(@Path() userId: string) {
     const user = await this.userService.getUserProfile(userId);
-    this.setStatus(200);
-    return user;
+    const response = new ResponseHandler({
+      data: user,
+      message: "User profile successfully fetched",
+      statusCode: this.setStatus(200),
+      status: "success",
+    });
+
+    return response;
   }
 }
